# gnomad-link

./: .dockerignore  .env.docker.example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  __init__.py  api_examples.md  claude_desktop_config.json  claude_desktop_config_example.json  container-release.json  error_handling_improvement_issue.md  index.html  install.sh  mcp_server.py  mcp_stdio_wrapper.py  mkdocs.yml  objects.inv  pyproject.toml  server.py  test_fastapi_endpoints.py  test_unified_system.py  v4_defaults_summary.md
.claude/skills/fastapi-route-change/: SKILL.md
.claude/skills/mcp-tool-change/: SKILL.md
.claude/skills/release-readiness/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  conformance.yml  container-ci.yml  container-release.yml  container-security.yml  docker.yml  docs.yml  release.yml  security.yml
MCP_CONNECTION_GUIDE/: index.html
api-reference/: index.html
architecture/: index.html
claude_desktop_configurations/: index.html
configuration/: index.html
data/: index.html
development/: index.html
docker/: Dockerfile  README.md  docker-compose.dev.yml  docker-compose.npm.yml  docker-compose.prod.yml  docker-compose.yml
docs/: MCP_CONNECTION_GUIDE.md  api-reference.md  architecture.md  claude_desktop_configurations.md  configuration.md  data.md  development.md  index.md  mcp-llm-consumer-review.md  usage.md
docs/gnomad_graphql/: gnomad_graphql_api_reference.md  gnomad_graphql_schema.json  gnomad_query_cookbook.md  gnomad_quick_start.md  gnomad_type_reference.md
docs/superpowers/: eval-baseline-2026-05-31.md
docs/superpowers/plans/: 2026-05-25-mcp-facade-migration.md  2026-05-25-stack-agent-modernization.md  2026-05-26-mcp-facade-polish.md  2026-05-26-phase-c-new-tools.md  2026-05-30-full-tool-audit-f1-f6.md  2026-05-30-gene-carrier-frequency.md  2026-05-30-mcp-10-of-10-llm-ergonomics.md  2026-05-30-mcp-10of10-deep-audit.md  2026-05-30-mcp-reliability-hardening.md  2026-05-31-mcp-9-5-correctness-and-eval.md
gnomad_graphql/gnomad_graphql_api_reference/: index.html
gnomad_graphql/gnomad_query_cookbook/: index.html
gnomad_graphql/gnomad_quick_start/: index.html
gnomad_graphql/gnomad_type_reference/: index.html
gnomad_link/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  server_manager.py
gnomad_link/api/: __init__.py  base_client.py  client.py
gnomad_link/api/routes/: __init__.py  clinvar.py  gene.py  (+8 more)
gnomad_link/graphql/: __init__.py  query_loader.py
gnomad_link/mcp/: __init__.py  af.py  annotations.py  build_check.py  clinvar_date_cache.py  clinvar_fencing.py  comparison_shaping.py  coverage_shaping.py  errors.py  facade.py  gene_carrier_shaping.py  gene_summary_shaping.py  headline.py  heteroplasmy.py  minimal_shaping.py  next_commands.py  notfound_guard.py  output_validation.py  patterns.py  population_shaping.py  prompts.py  provenance.py  recovery.py  resources.py  schema_relax.py  shaping.py  sv_shaping.py  untrusted_content.py
gnomad_link/models/: __init__.py  clinvar_models.py  coverage_models.py  gene_models.py  liftover_models.py  mitochondrial_models.py  region_models.py  structural_variant_models.py  transcript_models.py  variant_models.py
gnomad_link/services/: __init__.py  carrier_math.py  coverage_service.py  frequency_service.py  gene_carrier_filters.py  gene_carrier_math.py  gene_carrier_service.py  gene_summary_service.py  structural_variant_service.py  transcript_service.py
gnomad_link/transports/: __init__.py  base.py  factory.py
gnomad_mcp/: __init__.py  config.py
gnomad_mcp/api/: __init__.py  base_client.py  client.py  client_v2.py  unified_client.py
gnomad_mcp/graphql/: __init__.py  query_builder.py  query_loader.py
gnomad_mcp/models/: __init__.py  clinvar_models.py  enums.py  gene_models.py  liftover_models.py  mitochondrial_models.py  structural_variant_models.py  variant_models.py
gnomad_mcp/services/: __init__.py  frequency_service.py  frequency_service_cached.py  unified_service.py
introspection/: gnomAD_API_Comprehensive_Report.md  gnomad_api_full_analysis.py  gnomad_api_introspection.py  gnomad_example_queries.py  gnomad_population_analysis.py
mcp-llm-consumer-review/: index.html
scripts/: README.md  check_file_size.py  debug_transcript_error.py  debug_transcript_error_detailed.py  debug_transcript_not_found.py  debug_transcript_query.py  generate_gnomad_docs.py  introspect_exon_type.py  introspect_gtex.py  introspect_transcript.py  test_clinvar_meta_endpoint.py  test_gtex_grch37.py  test_liftover_endpoint.py  test_meta_query.py  test_meta_with_versions.py  test_transcript_api.py  test_transcript_endpoint.py  test_transcript_null.py
search/: search_index.json
superpowers/eval-baseline-2026-05-31/: index.html
tests/: conftest.py  test_base_client.py  test_cli.py  test_clinvar_endpoints.py  test_frequency_service_additional.py  test_gene_endpoints.py  test_liftover_endpoints.py  test_mitochondrial_endpoints.py  test_query_builder.py  test_query_loader.py  test_region_endpoints.py  test_search_endpoints.py  test_services.py  test_structural_variant_endpoints.py  test_transcript_endpoints.py  test_variant_endpoints.py  test_variant_endpoints_additional.py
tests/conformance/: test_contract_truth_v1.py
tests/eval/: baseline.json  fixtures.py  scenarios.py  scoring.py  test_eval_agentic.py  test_eval_baseline.py  test_scoring.py
tests/integration/: test_concurrency_live.py  test_gene_carrier_live.py  test_gene_summary_expression_live.py  test_mcp_live_tools.py  test_mitochondrial_endpoints.py  test_structural_variant_endpoints.py
tests/unit/: test_base_client.py  test_cli.py  test_cli_cache_commands.py  test_clinvar_submissions_batch.py  test_frequency_service_methods.py  test_health_endpoint.py  test_host_origin_guard.py  test_logging_config.py  test_new_models.py  test_query_builder.py  test_readme_tools.py  test_server_manager.py  test_tool_names.py  test_version_single_source.py
usage/: index.html
(+159 files in other folders)
