[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gnomad-link"
version = "7.0.0"
description = "A unified server providing REST API and MCP interfaces for gnomAD allele frequency data."
readme = "README.md"
authors = [{ name = "Bernt Popp" }]
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.139.0,<1.0.0",
    "uvicorn[standard]>=0.51.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "gql[aiohttp]>=4.0.0,<5.0.0",
    "httpx>=0.28.0,<1.0.0",
    "async-lru>=2.0.4,<3.0.0",
    "structlog>=26.1.0,<27.0.0",
    "orjson>=3.10.0,<4.0.0",
    "rich>=15.0.0,<16.0.0",
    "typer>=0.26.8,<1.0.0",
    "mcp[cli]>=1.28.1,<2.0.0",
    "fastmcp>=3.4.4,<4.0.0",
    "gunicorn>=25.3.0,<27.0.0",
    "asgi-correlation-id>=5.0.1,<6.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "pytest-cov>=6.0.0,<8.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "pytest-xdist>=3.6.0,<4.0.0",
    "respx>=0.22.0,<1.0.0",
    "ruff>=0.15.21,<1.0.0",
    "mypy>=2.2.0,<3.0.0",
    "pre-commit>=4.0.0,<5.0.0",
]
docs = [
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=1.0.5,<2",
]

[project.scripts]
gnomad-link = "gnomad_link.cli:app"

[project.urls]
Homepage = "https://github.com/berntpopp/gnomad-link"
Repository = "https://github.com/berntpopp/gnomad-link"
Issues = "https://github.com/berntpopp/gnomad-link/issues"

# Single source of truth for the version: [project].version above.
# gnomad_link.__version__ is derived from the installed metadata; keep
# [project].version in sync with the git release tag — .github/workflows/release.yml
# fails the release if the tag and this version diverge.
[tool.hatch.build.targets.wheel]
packages = ["gnomad_link"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "S",
    "T20",
    "SIM",
    "RUF",
]
ignore = [
    "S101",
    "E501",
    "B008",
    "N999",
    "RUF006",
    "RUF012",
    "RUF022",
    "SIM108",
    "SIM117",
    "T201",
    "UP042",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "T20"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
disable_error_code = [
    "return-value",
    "union-attr",
]
exclude = [
    ".*site-packages.*",
    ".*/miniforge3/.*",
    ".*/venv/.*",
    ".*/.venv/.*",
    "htmlcov/.*",
]

[[tool.mypy.overrides]]
module = [
    "async_lru.*",
    "structlog.*",
    "mcp.*",
    "fastmcp.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "gql.*",
    "graphql.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "-ra",
    "--import-mode=importlib",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["gnomad_link"]
omit = [
    "tests/*",
    "*/tests/*",
    "*/__init__.py",
]
branch = true

[tool.coverage.report]
fail_under = 70
precision = 2
show_missing = true
skip_empty = true
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
